...
                            ProgressView()
                            Spacer()
                        }
                    }
                }
                .navigationTitle("Exchanges")
                .searchable(text: $viewModel.searchText, prompt: "Busca exchange")
                .task {
                    if viewModel.exchanges.isEmpty {
                        await viewModel.loadExchanges()
                    }
                }
                
...
